Snapshot 47f473189e

* Fix typo so the removal of expanded activity bundles is complete. (tomeu)
* Don't disable the clipboard icons when they are still incomplete. (tomeu)
* #3053: Fix the distance between the clustered xos and the activity. (marco)
* Make the sizes of mesh icons match Eben spec. (marco)
* #3364: When joining an activity, pick up its sharing scope, so we don't
  try to re-share already shared activities in order to invite someone (smcv)

Snapshot 8b784a6223

* #3339 Add default mime types handler to the shell. (marco)
* #3143 Finish up the invite-only mode implementation. (marco)

Snapshot 79237f3114

* #2582 German translation. (fab)
* #2026 Fix the active flag when there are multiple toplevels. (marco)
* Fixed some issues with text objects in the clipboard. (tomeu)

Snapshot a1f5cece18

* Fix traceback on mesh disconnect command (dcbw)

Snapshot 6b6470ebcb

* #1260, #2664, #1542, #2985: Rework network UI bits to be more informative and
    increase granularity of mesh device control (dcbw)
* #2909: Make python activities more tolerant to missing metadata properties. (tomeu)
* #2653: Add audio/wav and audio/x-wav as Audio objects. (tomeu)
* Support moving of data files written to the datastore using standard Activity
  write_file() API (dcbw)

Snapshot c8700feccf

* Removing activity from donut when not the active and the last one (erikos)
* Fix when removing an item from the clipboard tray (erikos)
* #3085: Fixed XO icon in group view (erikos)
* #3856: support for content bundles (danw)

Snapshot d9a30c23ff

* #2960: Gray bottom border for Toolbox. (marco)
* #2164: Keybindings for buttons in intro sequence (erikos)

Snapshot 0ad6398cf1

* #3025: Make bundlebuilder work even if SUGAR_PREFIX is not set. (marco)
* #2896: Remove sugar.date module. (tomeu)

Snapshot 0b3f687749

* #3088: Fix style of zoom buttons palettes. (marco)
* Refactor activity share/join in Activity.__init__() to be clearer and cover
    all cases (dcbw)